Fix overflow

--- a/tutangle-responsive/css/layout.css
+++ b/tutangle-responsive/css/layout.css
@@ -99,7 +99,7 @@
 }
 
 .col-left {
-  width: 100%;
+  width: 60%;
 }
 .col-left-sidebar {
   display: none;
@@ -111,7 +111,7 @@
 
 .col-right-sidebar {
   background-color: #f5f5f5;
-  width: 176px;
+  width: 30%;
   height: 618px;
   display: none;
 }
@@ -174,7 +174,7 @@
 
 @media (min-width: 992px) {
   .col-left {
-    width: 78.67%;
+    width: 80%;
   }
 
   .subheader {
@@ -184,18 +184,18 @@
   }
 
   .col-left-body {
-    width: 70%;
+    width: 78%;
   }
 
   .col-left-sidebar {
     background-color: #f5f5f5;
-    width: 26.29%;
+    width: 18.29%;
     display: inline-block;
     height: 610px;
   }
 
   .col-right-sidebar {
-    width: 20%;
+    width: 14%;
   }
   .mbl-menu-icon {
     display: none;
