--- a/tutangle-responsive/css/reset.css
+++ b/tutangle-responsive/css/reset.css
@@ -3,6 +3,13 @@
   padding: 0;
 }
 
+html, body{
+  overflow-x: hidden;
+}
+
+body{
+  position: relative;
+}
 .left {
   float: left;
 }
